for some reason these did not commit

--- a/ui/modules/apps/BeamNG-MP/app.json
+++ b/ui/modules/apps/BeamNG-MP/app.json
@@ -9,6 +9,8 @@
   	"left": "180px",
   	"bottom": "0px",
   	"width": "410px",
-    "height": "160px"
+    "height": "160px",
+    "min-width": "410px",
+    "min-height": "160px",
   }
 }
