--- a/ui/modules/apps/BeamNG-MP/app.json
+++ b/ui/modules/apps/BeamNG-MP/app.json
@@ -8,9 +8,11 @@
   "css": {
   	"left": "180px",
   	"bottom": "0px",
-  	"width": "410px",
-    "height": "160px",
-    "min-width": "410px",
-    "min-height": "160px",
+  	"width": "570px",
+    "height": "120px",
+    "min-width": "570px",
+    "min-height": "120px",
+    "max-width": "570px",
+    "max-height": "120px",
   }
 }
