--- a/ui/modules/apps/BeamNG-MP-DEBUG/app.json
+++ b/ui/modules/apps/BeamNG-MP-DEBUG/app.json
@@ -3,12 +3,12 @@
   "author": "Titch2000",
   "version": "0.1",
   "description": "Host and Join multiplayer games",
-  "directive": "multiplayer-debug",
-  "domElement": "<multiplayer-debug></multiplayer-debug>",
+  "directive": "multiplayerdebug",
+  "domElement": "<multiplayerdebug></multiplayerdebug>",
   "css": {
-  	"left": "180px",
-  	"bottom": "0px",
-  	"width": "410px",
+  	"left": "530px",
+  	"bottom": "100px",
+  	"width": "190px",
     "height": "160px"
   }
 }
