little things, Getting ready to get back into this

--- a/Server/package.json
+++ b/Server/package.json
@@ -2,12 +2,15 @@
   "name": "beamng.drive-mp-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "Mitch Durso",
   "license": "ISC",
+  "devDependencies": {
+    "electron": "^6.0.7"
+  },
   "dependencies": {
     "minimist": "^1.2.0",
     "uuid": "^3.3.3"
