Pretty UI! Yay!

--- a/ui/modules/apps/BeamNG-MP-Session/app.json
+++ b/ui/modules/apps/BeamNG-MP-Session/app.json
@@ -13,6 +13,6 @@
     "min-width": "100px",
     "min-height": "120px",
     "max-width": "500px",
-    "max-height": "500px",
+    "max-height": "500px"
   }
 }
