--- a/ui/modules/apps/BeamNG-MP-Chat/app.json
+++ b/ui/modules/apps/BeamNG-MP-Chat/app.json
@@ -1,14 +1,14 @@
 {
-  "name": "Multiplayer",
+  "name": "Multiplayer Chat",
   "author": "Titch2000",
   "version": "0.2",
-  "description": "Host and Join multiplayer games",
-  "directive": "multiplayer",
-  "domElement": "<multiplayer></multiplayer>",
+  "description": "Chat while in multiplayer servers",
+  "directive": "multiplayerchat",
+  "domElement": "<multiplayerchat></multiplayerchat>",
   "css": {
   	"left": "180px",
   	"bottom": "0px",
-  	"width": "560px",
-    "height": "230px"
+  	"width": "550px",
+    "height": "170px"
   }
 }
