--- a/ui/modules/apps/BeamMP-Chat/app.json
+++ b/ui/modules/apps/BeamMP-Chat/app.json
@@ -1,14 +1,17 @@
 {
-  "name": "Multiplayer Chat",
-  "author": "Titch2000",
-  "version": "0.2",
-  "description": "Chat while in multiplayer servers",
-  "directive": "multiplayerchat",
   "domElement": "<multiplayerchat></multiplayerchat>",
+  "name": "Multiplayer Chat",
+  "types": [
+    "ui.apps.categories.multiplayer"
+  ],
   "css": {
   	"left": "180px",
   	"bottom": "0px",
   	"width": "550px",
     "height": "170px"
-  }
+  },
+  "description": "Chat while in multiplayer servers",
+  "author": "BeamMP",
+  "version": "1.0",
+  "directive": "multiplayerchat"
 }
