Modified BeamMP-Chat + UI
I did the following work:

1) Modified and adjusted app.html so the BeamMP-Chat UI app looks much nicer (IMO).

2) Modified and adjusted app.json with more up to date information.

3) Modified and adjusted app.js to displayer the user's time better using locales and time zone. Also adjusted some of the other functions and added more descriptive comments.

4) Made a new app.png in GIMP.

5) Created an app.css file as a redundant backup in case of emergencies. (Does nothing and is empty except for some comments.)

--- a/ui/modules/apps/BeamMP-Chat/app.json
+++ b/ui/modules/apps/BeamMP-Chat/app.json
@@ -1,17 +1,17 @@
 {
-  "domElement": "<multiplayerchat></multiplayerchat>",
-  "name": "Multiplayer Chat",
-  "types": [
-    "ui.apps.categories.multiplayer"
-  ],
-  "css": {
-  	"left": "180px",
-  	"bottom": "0px",
-  	"width": "550px",
-    "height": "170px"
-  },
-  "description": "Chat while in multiplayer servers",
-  "author": "BeamMP",
-  "version": "1.0",
-  "directive": "multiplayerchat"
+    "author": "BeamMP Team",
+    "css": {
+        "bottom": "0px",
+        "height": "250px",
+        "left": "180px",
+        "width": "700px"
+    },
+    "description": "Allows you to send chat messages while in a BeamMP server.",
+    "directive": "multiplayerchat",
+    "domElement": "<multiplayerchat></multiplayerchat>",
+    "name": "BeamMP Multiplayer Chat",
+    "types": [
+        "ui.apps.categories.multiplayer"
+    ],
+    "version": "1.1"
 }
