--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,16 +18,16 @@ jobs:
     - name: Generate SHA-256 hash
       id: sha256
       run: |
-        sha256sum BeamMP.zip | awk '{print $1}' > beammp.zip.sha256
+        sha256sum BeamMP.zip | awk '{print $1}' > BeamMP.zip.sha256
       working-directory: ${{ github.workspace }}
     - name: Upload artifacts
       run: |
         curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/zip" \
           --data-binary "@BeamMP.zip" \
-          --url "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ github.event.release.id }}/assets?name=beammp.zip"
+          --url "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ github.event.release.id }}/assets?name=BeamMP.zip"
         curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: text/plain" \
-          --data-binary "@beammp.zip.sha256" \
-          --url "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ github.event.release.id }}/assets?name=beammp.zip.sha256"
+          --data-binary "@BeamMP.zip.sha256" \
+          --url "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ github.event.release.id }}/assets?name=BeamMP.zip.sha256"
       working-directory: ${{ github.workspace }}
